--- a/whispr.html
+++ b/whispr.html
@@ -1,3 +1,4 @@
+<html>
 <head>
 <title>Whispr</title>
 <style>
@@ -113,20 +114,21 @@ body {
 </head>
 
 <body>
-<h2 align = "center"> Whispr </h2>
+<h2 align="center"> Whispr </h2>
 <p>
 <section class="container flex">
-  <div class = "item flex-item-1">
-    <input class = "item2" type="text" name="search">
-    <input class = "item3" target = "_blank"  type = "submit" value = "Pesquisar">
+  <div class="item flex-item-1">
+    <input class="item2" type="text" name="search">
+    <input class="item3" target="_blank"  type="submit" value="Pesquisar">
   </div> 
 
 </section>
 <br>
 <section class="container column-nowrap">
-	<div class="item4">Notícia 1</div>
-	<div class="item4">Notícia 2</div>
-	<div class="item4">Notícia 3</div>
-	<div class="item4">Notícia 4</div>
+	<div class="item4">NotÃ­cia 1</div>
+	<div class="item4">NotÃ­cia 2</div>
+	<div class="item4">NotÃ­cia 3</div>
+	<div class="item4">NotÃ­cia 4</div>
 </section>
 <body>
+	</html>
